--- a/src/app/_mixins.scss
+++ b/src/app/_mixins.scss
@@ -1,5 +1,11 @@
+@mixin tablet() {
+  @media (min-width: 481px) {
+    @content;
+  }
+}
+
 @mixin desktop() {
-  @media (min-width: 40rem) {
+  @media (min-width: 769px) {
     @content;
   }
 }
