--- a/src/components/statusdisplay/StatusDisplay.module.scss
+++ b/src/components/statusdisplay/StatusDisplay.module.scss
@@ -1,3 +1,5 @@
+@import "../../app/_mixins.scss";
+
 .bordered-box {
   display: flex;
   align-items: center;
@@ -18,8 +20,8 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  gap: 1rem;
-  padding: 1rem 0;
+  gap: var(--gap);
+
   flex-grow: 3;
   font-weight: bold;
 
@@ -34,7 +36,10 @@
       display: flex;
       flex-direction: column;
       gap: 0.3rem;
-      font-size: 1.2rem;
+
+      @include desktop() {
+        font-size: 2rem;
+      }
 
       div {
         display: flex;
@@ -53,9 +58,16 @@
 
   button {
     @extend .bordered-box;
-    font-size: 2rem;
-    padding: 2rem 0;
+    padding: 1rem 0;
     background-color: var(--ok-color);
+
+    @include tablet() {
+      font-size: 2rem;
+    }
+
+    @include desktop() {
+      padding: 2rem 0;
+    }
 
     &:disabled {
       background-color: var(--primary-color);
