Minor CSS Tweaks

--- a/src/components/statusdisplay/StatusDisplay.module.scss
+++ b/src/components/statusdisplay/StatusDisplay.module.scss
@@ -12,7 +12,6 @@
 }
 
 .status {
-  height: 100%;
   border: var(--border-thick);
   border-radius: var(--border-radius);
   background-color: var(--primary-color);
@@ -21,6 +20,7 @@
   justify-content: space-between;
   align-items: center;
   gap: var(--gap);
+  padding: var(--gap) 0;
 
   flex-grow: 3;
   font-weight: bold;
@@ -50,6 +50,7 @@
 
     &:nth-child(2) {
       flex-grow: 1;
+      max-height: 40%;
       font-size: clamp(5rem, 0.7143rem + 19.0476vw, 15rem);
       background-color: var(--secondary-color);
       color: var(--font-color);
