--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -4,7 +4,7 @@
   @include spread-map($theme-light);
 
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   background-color: var(--background-color);
   display: flex;
   flex-direction: column;
