--- a/src/components/navbar/NavBar.module.scss
+++ b/src/components/navbar/NavBar.module.scss
@@ -2,17 +2,18 @@
   flex-grow: 1;
   display: flex;
   justify-content: space-between;
-  padding: 0.5rem;
+  align-items: center;
   border: var(--border-thick);
   border-radius: var(--border-radius);
+  padding: 0 0.5rem;
 
   button {
     color: var(--primary-color);
     background-color: var(--background-color);
     border: var(--border-thick);
     border-radius: var(--border-radius-tight);
-    font-size: 1.5rem;
-    font-weight: bold;
+    font-size: 2rem;
+    padding: 0 0.5rem;
     aspect-ratio: 1;
     display: flex;
     justify-content: center;
