More font scaling

--- a/src/components/statusdisplay/StatusDisplay.module.scss
+++ b/src/components/statusdisplay/StatusDisplay.module.scss
@@ -51,7 +51,7 @@
     &:nth-child(2) {
       flex-grow: 1;
       max-height: 40%;
-      font-size: 10rem;
+      font-size: clamp(6rem, 15vw, 10rem);
       background-color: var(--secondary-color);
       color: var(--font-color);
     }
