--- a/src/components/playercard/PlayerCard.module.scss
+++ b/src/components/playercard/PlayerCard.module.scss
@@ -61,7 +61,7 @@
   justify-content: center;
   align-items: center;
   color: var(--font-color);
-  font-size: 16rem;
+  font-size: clamp(8rem, 20vw, 20rem);
   font-weight: bold;
   border-radius: var(--border-radius);
   border: var(--font-color) 0.25rem solid;
