--- a/src/components/statusdisplay/StatusDisplay.module.scss
+++ b/src/components/statusdisplay/StatusDisplay.module.scss
@@ -50,7 +50,7 @@
       flex-grow: 1;
       flex-shrink: 1;
       max-height: 40%;
-      font-size: clamp(6rem, 15vw, 10rem);
+      font-size: 10rem;
       background-color: var(--secondary-color);
       color: var(--font-color);
     }
