--- a/src/components/navbar/NavBar.module.scss
+++ b/src/components/navbar/NavBar.module.scss
@@ -3,20 +3,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border: var(--border-thick);
-  border-radius: var(--border-radius);
-  padding: 0 0.5rem;
 
   button {
-    color: var(--primary-color);
-    background-color: var(--background-color);
-    border: var(--border-thick);
-    border-radius: var(--border-radius-tight);
-    font-size: 2rem;
-    padding: 0 0.5rem;
-    aspect-ratio: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    color: var(--secondary-color);
+    background-color: var(--primary-color);
   }
 }
