--- a/src/components/playercard/PlayerCard.module.scss
+++ b/src/components/playercard/PlayerCard.module.scss
@@ -17,10 +17,6 @@
     color: var(--font-color);
   }
 
-  &.actionable {
-    cursor: pointer;
-  }
-
   .statusRow {
     font-size: 1rem;
     font-weight: bold;
@@ -72,7 +68,6 @@
     z-index: 1;
     width: 100%;
     height: 50%;
-    cursor: pointer;
   }
 
   .overlayTop {
@@ -88,4 +83,8 @@
     right: 0;
     border-top: var(--font-color) thin solid;
   }
+}
+
+.actionable {
+  cursor: pointer;
 }
