--- a/src/components/playercard/PlayerCard.module.scss
+++ b/src/components/playercard/PlayerCard.module.scss
@@ -10,11 +10,21 @@
   color: var(--secondary-color);
   overflow-x: hidden;
   max-width: 40vw;
+  position: relative;
 
   &.active {
     border-color: var(--alert-color);
     background-color: var(--secondary-color);
     color: var(--font-color);
+  }
+
+  .activationOverlay {
+    position: absolute;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    cursor: pointer;
   }
 
   .statusRow {
@@ -54,37 +64,40 @@
 .scoreCard {
   flex-grow: 100;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  color: var(--font-color);
-  font-size: 15rem;
-  font-weight: bold;
   border-radius: var(--border-radius);
-  border: var(--font-color) 0.25rem solid;
   position: relative;
 
-  .overlay {
+  & button {
+    flex-grow: 1;
+    width: 100%;
+    aspect-ratio: auto;
+    border: var(--font-color) thin solid;
+
+    &:nth-child(1) {
+      border-radius: var(--border-radius) var(--border-radius) 0 0;
+    }
+
+    &:nth-child(2) {
+      border-radius: 0 0 var(--border-radius) var(--border-radius);
+    }
+  }
+
+  .inningsOverlay {
+    pointer-events: none;
     position: absolute;
     z-index: 1;
     width: 100%;
-    height: 50%;
+    height: 100%;
+    background-color: transparent;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: var(--font-color);
+    font-size: 15rem;
+    font-weight: bold;
   }
-
-  .overlayTop {
-    @extend .overlay;
-    top: 0;
-    left: 0;
-    border-bottom: var(--font-color) thin solid;
-  }
-
-  .overlayBottom {
-    @extend .overlay;
-    bottom: 0;
-    right: 0;
-    border-top: var(--font-color) thin solid;
-  }
-}
-
-.actionable {
-  cursor: pointer;
 }
