--- a/src/components/navbar/NavBar.module.scss
+++ b/src/components/navbar/NavBar.module.scss
@@ -2,7 +2,7 @@
   flex-grow: 1;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: stretch;
 
   button {
     color: var(--secondary-color);
