--- a/src/components/dialog/Dialog.module.scss
+++ b/src/components/dialog/Dialog.module.scss
@@ -10,23 +10,42 @@
   gap: 0.5rem;
   height: 100vh;
   width: 100vw;
-  font-size: 2rem;
   color: var(--secondary-color);
   background-color: var(--primary-color);
   overflow-x: hidden;
+
+  details {
+    cursor: help;
+    max-width: 90vw;
+    & > summary {
+      list-style: none;
+    }
+    & > summary::-webkit-details-marker {
+      display: none;
+    }
+    p {
+      color: var(--font-color);
+      background-color: var(--secondary-color);
+      border: var(--border-thick-secondary);
+      border-radius: var(--border-radius);
+      padding: 1rem;
+    }
+  }
 
   h1 {
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 3rem;
     height: 10rem;
     background: center / contain no-repeat url("/carom.svg");
-    text-shadow: 0px 0px 6px black;
+    text-shadow: 1px 1px 1px black, -1px 1px 1px black, -1px -1px 1px black,
+      1px -1px 1px black;
   }
 
   input {
     max-width: 90vw;
-    font-size: 2rem;
+    font-size: 1.5rem;
     border: var(--border-thick-secondary);
     border-radius: var(--border-radius);
     padding: 0.5rem;
