--- a/src/components/statistics/Statistics.module.scss
+++ b/src/components/statistics/Statistics.module.scss
@@ -4,4 +4,5 @@
   justify-content: center;
   align-items: center;
   background-color: var(--primary-color);
+  border-radius: var(--border-radius);
 }
