Refactor: Externalize ShotClock timer from game context

--- a/src/components/playercard/PlayerCard.module.scss
+++ b/src/components/playercard/PlayerCard.module.scss
@@ -8,7 +8,7 @@
   flex-direction: column;
   flex-grow: 4;
   color: var(--secondary-color);
-  overflow-x: hidden;
+  overflow: hidden;
   max-width: 40vw;
   position: relative;
 
