--- a/src/components/statusdisplay/StatusDisplay.module.scss
+++ b/src/components/statusdisplay/StatusDisplay.module.scss
@@ -39,6 +39,10 @@
         display: flex;
         justify-content: space-between;
         width: 100%;
+        span {
+          width: 3rem;
+          text-align: right;
+        }
       }
     }
 
