Add support for keyboard controls

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -11,6 +11,7 @@
   justify-content: space-evenly;
   gap: var(--gap);
   padding: var(--gap);
+  outline: 0;
 
   &.nightshift {
     @include spread-map($theme-dark);
