Add QR code to config page for sharing the game

--- a/src/components/dialog/Dialog.module.scss
+++ b/src/components/dialog/Dialog.module.scss
@@ -82,4 +82,12 @@
       text-align: right;
     }
   }
+
+  .modal {
+    margin: auto;
+    padding: 1rem;
+    &::backdrop {
+      background-color: rgba(0, 0, 0, 0.8);
+    }
+  }
 }
