--- a/src/app/follow/[gameId]/components/ScoreBoard.module.scss
+++ b/src/app/follow/[gameId]/components/ScoreBoard.module.scss
@@ -63,6 +63,15 @@
     .inning {
       aspect-ratio: 1;
       border-radius: 50%;
+
+      &.shotclock {
+        background: radial-gradient(
+            closest-side,
+            var(--background-color) 79%,
+            transparent 80% 100%
+          ),
+          conic-gradient(var(--background-color) var(--percentage), green 0);
+      }
     }
   }
 
