--- a/src/app/follow/[gameId]/components/ScoreBoard.module.scss
+++ b/src/app/follow/[gameId]/components/ScoreBoard.module.scss
@@ -7,7 +7,9 @@
   width: 100%;
   color: var(--color);
   font-size: 2rem;
+  font-weight: bold;
   display: flex;
+  flex-wrap: wrap;
   gap: var(--gap);
 
   .innings {
@@ -21,7 +23,7 @@
   }
 
   .players {
-    width: 100%;
+    flex-grow: 1;
     display: grid;
     gap: var(--gap);
     grid-template-columns: auto 3rem 3rem 6rem;
@@ -63,15 +65,6 @@
     .inning {
       aspect-ratio: 1;
       border-radius: 50%;
-
-      &.shotclock {
-        background: radial-gradient(
-            closest-side,
-            var(--background-color) 79%,
-            transparent 80% 100%
-          ),
-          conic-gradient(var(--background-color) var(--percentage), green 0);
-      }
     }
   }
 
@@ -81,5 +74,19 @@
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+
+  .shotclock {
+    width: 100%;
+    height: 0.5rem;
+    flex-basis: 100%;
+
+    background-image: linear-gradient(
+      90deg,
+      var(--background-color) 0%,
+      var(--background-color) var(--percentage),
+      hotpink var(--percentage),
+      hotpink 100%
+    );
   }
 }
