Remote monitor tweaks:
* Show caret for active player
* Stop shotclock when game ends
* Show innings target

--- a/src/app/follow/[gameId]/components/ScoreBoard.module.scss
+++ b/src/app/follow/[gameId]/components/ScoreBoard.module.scss
@@ -20,6 +20,11 @@
     justify-content: center;
     align-items: center;
     background-color: var(--background-color);
+
+    & span {
+      font-size: 1rem;
+      font-weight: normal;
+    }
   }
 
   .players {
