Major CSS tweaks

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -3,8 +3,10 @@
 .themeContainer {
   @include spread-map($theme-light);
 
-  width: 100vw;
+  min-width: 100vw;
+  max-width: 100vw;
   min-height: 100vh;
+  max-height: 100vh;
   background-color: var(--background-color);
   display: flex;
   flex-direction: column;
