--- a/src/components/statusdisplay/StatusDisplay.module.scss
+++ b/src/components/statusdisplay/StatusDisplay.module.scss
@@ -1,17 +1,18 @@
 @import "../../app/_mixins.scss";
 
 .status {
+  flex-basis: 0;
+  flex-grow: 1;
+
   border: var(--border-thick);
   border-radius: var(--border-radius);
   background-color: var(--primary-color);
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
   gap: var(--gap);
   padding: var(--gap) 0;
 
-  flex-grow: 3;
   font-weight: bold;
 
   &.middle {
@@ -19,6 +20,7 @@
   }
 
   & > div {
+    font-size: 1.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -32,7 +34,7 @@
       display: flex;
       flex-shrink: 1;
       flex-direction: column;
-      gap: 0.3rem;
+      gap: 0.5rem;
       overflow-y: hidden;
 
       div {
@@ -40,7 +42,6 @@
         justify-content: space-between;
         width: 100%;
         span {
-          width: 3rem;
           text-align: right;
         }
       }
@@ -48,15 +49,9 @@
 
     &:nth-child(2) {
       flex-grow: 1;
-      flex-shrink: 1;
-      max-height: 40%;
       font-size: 10rem;
       background-color: var(--secondary-color);
       color: var(--font-color);
-    }
-
-    &:nth-child(3) {
-      visibility: hidden;
     }
   }
 }
