--- a/src/components/statusdisplay/StatusDisplay.module.scss
+++ b/src/components/statusdisplay/StatusDisplay.module.scss
@@ -20,7 +20,7 @@
   }
 
   & > div {
-    font-size: 1.5rem;
+    //font-size: 1.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -48,6 +48,7 @@
     }
 
     &:nth-child(2) {
+      flex-shrink: 1;
       flex-grow: 2;
       font-size: 10rem;
       background-color: var(--secondary-color);
@@ -55,11 +56,13 @@
     }
 
     &:nth-child(3) {
+      flex-shrink: 1;
       flex-grow: 1;
       border: none;
 
       button {
         height: 100%;
+        max-width: 100%;
       }
     }
   }
