--- a/src/components/statusdisplay/StatusDisplay.module.scss
+++ b/src/components/statusdisplay/StatusDisplay.module.scss
@@ -20,7 +20,6 @@
   }
 
   & > div {
-    //font-size: 1.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -63,6 +62,7 @@
       button {
         height: 100%;
         max-width: 100%;
+        background-color: var(--secondary-color);
       }
     }
   }
