--- a/src/app/follow/[gameId]/components/ScoreBoard.module.scss
+++ b/src/app/follow/[gameId]/components/ScoreBoard.module.scss
@@ -31,6 +31,7 @@
     display: grid;
     gap: var(--gap);
     grid-template-columns: auto 3rem 3rem 6rem;
+    flex-grow: 1;
 
     .player0 {
       --background-color: white;
